@@ -23,6 +23,7 @@ endif::[]
 === Fixes and Improvements
 
 * fixes: #225 Build support for Java 17, 18 (#289)
+* #298: Improve PollAndProduce performance by first producing all records, and then waiting for the produce results. Previously, this was done for each ProduceRecord individually.
 
 == v0.5.0.0
 
